# CMaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
bench/: CMakeLists.txt  bench_example.cpp
cmaker/: add_bench.cpp  add_submodule.cpp  add_tests.cpp  add_thirdparty_library.cpp  create_new_project.cpp  functions.cpp  functions.h  writer_funcs.cpp  writer_funcs.h
unit_test/: CMakeLists.txt  test_functions.cpp
